--- a/index.html
+++ b/index.html
@@ -26,22 +26,22 @@
     font-size: 20px;
     padding: 1px;
     background-color: whitesmoke;">Student at Binus University</div>
-<div style="
+<div class="profile" style="
     border:2px solid black;
     width: 30%;
-    height: 510px;
+    height: 400px;
     float:left;
     text-align: center;
     font-size: 30px;
     background-color: whitesmoke;">Profile Picture
     <section>
-    <img src="img.jpg" width="300" height="400" alt="profile Picture" ></section></div>
-<div style="
+<img src="img.jpg" width="250" height="300" alt="profile Picture" ></section></div>
+<div class="aboutme"style="
     border:2px solid black;
     width:100%;
-    height:30px;
+    height:70px;
     background-color:azure;
     text-align:center;
-    font-size:20px;">About me</div>
+    font-size:50px;"><a href="youtube.com">About me</a></div>
 </body>
 </html>
