--- a/index.html
+++ b/index.html
@@ -12,36 +12,40 @@
         background-size: cover;
     }
 </style>
+<section>
 <div style="
     border:2px solid black;
-    width: 100%;
+    margin-left:50px;
+    width: 92%;
     text-align: center;
-    font-size: 30px;
-    padding: 10x;
-    background-color: whitesmoke;">Rafael Anderson</div>
+    padding: 2px;;
+    background-color: whitesmoke;"><h1>Rafael Anderson</h1></div>
 <div style="
     border:2px solid black;
-    width: 100%;
+    width: 92%;
     text-align: center;
-    font-size: 20px;
-    padding: 1px;
-    background-color: whitesmoke;">Student at Binus University</div>
+    margin-left:50px;
+    background-color: whitesmoke;"><h3>Student at Binus University</h3></div>
 <div class="profile" style="
     border:2px solid black;
-    width: 30%;
+    width: 19%;
     height: 400px;
     float:left;
+    margin-left:50px;
+    padding:10px;
     text-align: center;
     font-size: 30px;
     background-color: whitesmoke;">Profile Picture
-    <section>
-<img src="img.jpg" width="250" height="300" alt="profile Picture" ></section></div>
+<img class="profiles"src="img.jpg" width="240" height="290" alt="profile Picture" ></div>
 <div class="aboutme"style="
     border:2px solid black;
-    width:100%;
+    width:92%;
     height:70px;
+    float:center;
+    margin-left:50px;
     background-color:azure;
     text-align:center;
-    font-size:50px;"><a href="youtube.com">About me</a></div>
+    font-size:50px;"><a href="youtube.com">About me </a></div>
+</section>
 </body>
 </html>
