--- a/index.html
+++ b/index.html
@@ -13,18 +13,16 @@
     }
 </style>
 <section>
-<div style="
+<div class="name"style="
     border:2px solid black;
-    margin-left:50px;
     width: 92%;
     text-align: center;
     padding: 2px;;
     background-color: whitesmoke;"><h1>Rafael Anderson</h1></div>
-<div style="
+<div class="name"style="
     border:2px solid black;
     width: 92%;
     text-align: center;
-    margin-left:50px;
     background-color: whitesmoke;"><h3>Student at Binus University</h3></div>
 <div class="profile" style="
     border:2px solid black;
