--- a/index.html
+++ b/index.html
@@ -44,6 +44,15 @@
     background-color:azure;
     text-align:center;
     font-size:50px;"><a href="youtube.com">About me </a></div>
+<div class="sosmeds"style="
+    border:2px solid black;
+    width:92%;
+    height:70px;
+    float:center;
+    margin-left:50px;
+    background-color:azure;
+    text-align:center;
+    font-size:50px;"><a href="youtube.com">Social media</a></div>
 </section>
 </body>
 </html>
