--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     margin-left:50px;
     background-color:azure;
     text-align:center;
-    font-size:50px;"><a href="youtube.com">Social media</a></div>
+    font-size:50px;"><a href="https://rafael23082.github.io/A/">Social media</a></div>
 </section>
 </body>
 </html>
