--- a/index.html
+++ b/index.html
@@ -47,12 +47,10 @@
 <div class="sosmeds"style="
     border:2px solid black;
     width:92%;
-    height:70px;
     float:center;
     margin-left:50px;
     background-color:azure;
-    text-align:center;
-    font-size:50px;"><a href="socialmedia.html">Social media</a></div>
+    text-align:center;"><a href="socialmedia.html">Social media</a></div>
 </section>
 </body>
 </html>
