--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     float:center;
     margin-left:50px;
     background-color:azure;
-    text-align:center;"><a href="socialmedia.html">Social media</a></div>
+    text-align:center;"><a href="Socialmedia.html">Social media</a></div>
 </section>
 </body>
 </html>
