--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     margin-left:50px;
     background-color:azure;
     text-align:center;
-    font-size:50px;"><a href=".">About me </a></div>
+    font-size:50px;"><a href="aboutme.html">About me </a></div>
 <div class="sosmeds"style="
     border:2px solid black;
     width:92%;
