--- a/index.html
+++ b/index.html
@@ -26,31 +26,24 @@
     background-color: whitesmoke;"><h3>Student at Binus University</h3></div>
 <div class="profile" style="
     border:2px solid black;
-    width: 19%;
-    height: 400px;
+    width: 92%;
+    height: 350px;
     float:left;
     margin-left:50px;
-    padding:10px;
     text-align: center;
     font-size: 20px;
-    background-color: whitesmoke;">Profile Picture
-<img class="profiles"src="img.jpg" width="240" height="290" alt="profile Picture" ></div>
+    background-color: whitesmoke;"><p>Profile Picture</p>
+<img class="profiles"src="img.jpg"alt="profile Picture" ></div>
 <div class="aboutme"style="
     border:2px solid black;
-    width:92%;
-    height:70px;
-    float:center;
-    margin-left:50px;
+    float:left;
     background-color:azure;
-    text-align:center;
-    font-size:50px;"><a href="aboutme.html">About me </a></div>
+    text-align:center;"><a href="youtube.com">About me </a></div>
 <div class="sosmeds"style="
     border:2px solid black;
-    width:92%;
-    float:center;
-    margin-left:50px;
+    float:right;
     background-color:azure;
-    text-align:center;"><a href="sm.html">Social media</a></div>
+    text-align:center;"><a href="youtube.com">Social media</a></div>
 </section>
 </body>
 </html>
