--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
     border:2px solid black;
     float:left;
     background-color:azure;
-    text-align:center;"><a href="youtube.com">About me </a></div>
+    text-align:center;"><a href="aboutme.html">About me </a></div>
 <div class="sosmeds"style="
     border:2px solid black;
     float:right;
     background-color:azure;
-    text-align:center;"><a href="youtube.com">Social media</a></div>
+    text-align:center;"><a href="sm.html">Social media</a></div>
 </section>
 </body>
 </html>
