--- a/aboutme.html
+++ b/aboutme.html
@@ -1,37 +1,32 @@
-<div style="
-    border:2px solid black;
-    width:60%;
-    margin:0px auto;
-    text-align:center;
-    font-size:50px;
-    background-color: bisque;">About Me</div>
-<div style="
-    width:59%;
-    border:2px solid black;
-    margin:0px auto;
-    padding:5px;
-    text-align: center;
-    font-size: 15px;
-    background-color: bisque;">
-<h2>Full name: Rafael Anderson</h2>
-<h2>Nim: 2702255981</h2>
-<h2>Gender</h2>
-<input type="radio" name="gender" id="male" checked>
-<label for="male">Male</label>
-<input type="radio" name="gender" id="female">
-<label for="male">Female</label>
-<h2>Programming Skills</h2>
-<input type="checkbox" name="pro" id="css">
-<label for="css">CSS</label>    
-<input type="checkbox" name="pro" id="java">
-<label for="css">JavaScript</label>    
-<input type="checkbox" name="pro" id="html">
-<label for="css">HTML</label>    
-<h2>Hobbies/Interests</h2>
-<ul>
-    <li>Watching Movies</li>
-    <li>Playing Badminton</li>
-    <li>Playing video games</li>
-    <li>Reading Mangas</li>
-</ul>
-</div>
+<!DOCTYPE html>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width initial-scale=1">
+<head>
+<link rel="stylesheet" href="styless.css">
+</head>
+<body>
+    <div class="container">
+        <div class="box-1">About Me</div>
+        <div class="box-2"><h2>Full name: Rafael Anderson</h2>
+            <h2>Nim: 2702255981</h2>
+            <h2>Gender</h2>
+            <input type="radio" name="gender" id="male" checked>
+            <label for="male">Male</label>
+            <input type="radio" name="gender" id="female">
+            <label for="male">Female</label>
+            <h2>Programming Skills</h2>
+            <input type="checkbox" name="pro" id="css">
+            <label for="css">CSS</label>    
+            <input type="checkbox" name="pro" id="java">
+            <label for="css">JavaScript</label>    
+            <input type="checkbox" name="pro" id="html">
+            <label for="css">HTML</label>    
+            <h2>Hobbies/Interests</h2>
+            <ul>
+                <li>Watching Movies</li>
+                <li>Playing Badminton</li>
+                <li>Playing video games</li>
+                <li>Reading Mangas</li>
+            </ul></div>
+    </div>
+</body>
